--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/weka-src.jar"/>
-	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/weka.jar"/>
+	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/weka.jar" sourcepath="/RandomForest/lib/weka-src.jar"/>
 	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/MLTools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
