--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/HDP.jar"/>
-	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/MLTools.jar"/>
-	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/weka-src.jar"/>
-	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/weka.jar" sourcepath="/RandomForest/lib/weka-src.jar"/>
+	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/HDP.jar"/>
+	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/MLTools.jar"/>
+	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/weka.jar"/>
+	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/weka-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
