--- a/.classpath
+++ b/.classpath
@@ -6,10 +6,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/HDP.jar"/>
-	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/MLTools.jar"/>
-	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/weka.jar"/>
-	<classpathentry kind="lib" path="C:/Users/zhe/eclipse-workspace/ESKDB-on-numerical-data/lib/weka-src.jar"/>
+	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/HDP.jar"/>
+	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/MLTools.jar" sourcepath="lib/MLTools.jar"/>
+	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/weka-src.jar"/>
+	<classpathentry kind="lib" path="/Users/hezhang/eclipse-workspace/ESKDB_MDLR_HDP/lib/weka.jar" sourcepath="/RandomForest/lib/weka-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
